--- a/index.html
+++ b/index.html
@@ -2,9 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Welcome nebo</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-
+    <div class="root">
+        <div class="head">
+            <div class="head__background"></div>
+            <div class="head__content">
+                <div class="head__logo"></div>
+                <div class="head__text">
+                    Полет на воздушном шаре<br> в Ярославле
+                </div>
+            </div>
+        </div>
+        <div class="slide__text">
+            <div class="slide__text__divider"></div>
+            <div class="slide__text__title">
+                <span class="slide__text__title__text">Добро пожаловать в небо!</span>
+            </div>
+            <div class="slide__text__text">
+                Мы приглашаем Вас стать участником увлекательного путешествия на Воздушном Шаре, оценить красоту нашего города с высоты птичьего полёта, почувствовать себя романтиком Жюль Верновских времен и испытать массу приятных и незабываемых впечатлений.
+            </div>
+        </div>
+        <div class="slide__img">
+            <div class="slide__img__background" style='background-image: url("/img/2.jpg")'></div>
+            <div class="slide__img__text">
+                Для совершения полета на воздушном шаре Вам не надо обладать никакими специальными техническими знаниями или специальной физической подготовкой, от Вас достаточно лишь ЖЕЛАНИЕ, об остальном позаботимся МЫ.
+            </div>
+        </div>
+        <div class="slide__text">
+            <div class="slide__text__divider slide__text__divider_phone"></div>
+            <div class="slide__text__title">
+                <span class="slide__text__title__text">Запись на полет</span>
+            </div>
+            <div class="slide__text__text">
+                <div class="contacts">
+                    8-905-135-68-88 - Олег
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
